fix: improve dark mode autofill styling

--- a/console-frontend/src/styles.css
+++ b/console-frontend/src/styles.css
@@ -75,7 +75,7 @@ input[type='date'],
 input[type='email'],
 input[type='password'],
 textarea {
-  @apply w-full rounded-md border border-gray-300 px-3 py-2 text-sm placeholder-gray-400 ring-indigo-500 focus:border-indigo-500 focus:ring-1 focus:outline-none dark:border-gray-800 dark:bg-gray-900 dark:text-white dark:placeholder-gray-600 dark:ring-offset-gray-950;
+  @apply w-full rounded-md border border-gray-300 px-3 py-2 text-sm placeholder-gray-400 ring-indigo-500 focus:border-indigo-500 focus:ring-1 focus:outline-none dark:border-gray-800 dark:bg-gray-900 dark:text-white dark:placeholder-gray-600 dark:ring-offset-gray-950 dark:autofill:scheme-dark;
 }
 
 select {
